syntax = "proto3";

package types.v1;

option java_multiple_files = true;

message OptionalTestMessage {
  string required_string = 1;
  optional string  optional_string = 2;
  Message required_message = 3;
  optional Message optional_message = 4;

  message Message {
  }
}
